WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196556
Web Inspector: DOMDebugger: "Attribute Modified" breakpoints pause after the modification occurs for the style attribute
https://bugs.webkit.org/show_bug.cgi?id=196556
Summary
Web Inspector: DOMDebugger: "Attribute Modified" breakpoints pause after the ...
Devin Rousso
Reported
2019-04-03 13:26:54 PDT
# STEPS TO REPRODUCE: 1. inspect any page 2. go to the Elements tab 3. context menu on the <body> 4. Break on... > Attribute Modified 5. evaluate `document.body.style.setProperty("--a", "0")` in the console => JavaScript should pause on a Console Evaluation with the above code highlighted 6. go to the Elements tab => the <body> has a `style="--a: 0;"` attribute
Attachments
Patch
(21.26 KB, patch)
2019-04-13 14:43 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-03 13:27:12 PDT
<
rdar://problem/49570681
>
Devin Rousso
Comment 2
2019-04-03 13:30:45 PDT
This works as expected (e.g. the breakpoint pauses before the modification occurs) for any non-style attribute.
Devin Rousso
Comment 3
2019-04-13 14:43:48 PDT
Created
attachment 367392
[details]
Patch
WebKit Commit Bot
Comment 4
2019-04-15 10:27:51 PDT
Comment on
attachment 367392
[details]
Patch Clearing flags on attachment: 367392 Committed
r244269
: <
https://trac.webkit.org/changeset/244269
>
WebKit Commit Bot
Comment 5
2019-04-15 10:27:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug